# Archipelago-lobby

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  docker-compose.yml.example  start.sh
.github/workflows/: mirror-to-gitlab.yml
apdiff-viewer/: Cargo.toml  build.rs  docker-compose.yml.example
apdiff-viewer/migrations/2026-05-10-000000_create_submissions/: down.sql  up.sql
apdiff-viewer/src/: blob_store.rs  guards.rs  main.rs  schema.rs
apdiff-viewer/src/api/: mod.rs
apdiff-viewer/src/db/: mod.rs  submissions.rs
apdiff-viewer/src/diff/: compute.rs  mod.rs
apdiff-viewer/src/source/: mod.rs  submission.rs  tc.rs
apdiff-viewer/static/css/: main.css  main.css.map
apdiff-viewer/static/sass/: main.sass
apdiff-viewer/templates/: index.html
apwm/: README.md
apwm/src/: changes.rs
apwm/src/index/: mod.rs
lobby/src/: lib.rs
lobby/src/db/: room.rs
lobby/src/views/: options_gen.rs  room_settings.rs
lobby/src/views/room/: edit.rs
lobby/static/css/: base.css  base.css.map
lobby/static/js/: menu.js
lobby/static/sass/: base.sass
lobby/templates/: base.html  goodbye.html
lobby/templates/index/: help.html
taskcluster/docker/ap-worker/: Dockerfile  setup.sh
