[workspace]
resolver = "2"
members = [
    "common",
    "lobby",
    "apwm",
    "wq",
    "apdiff-viewer",
    "community-ap-tools",
]

[patch.crates-io]
figment = { git = "https://github.com/ionium-ap/Figment.git", branch = "ionium" }
rocket = { git = "https://github.com/ionium-ap/Rocket.git", branch = "ionium" }
rocket_ws = { git = "https://github.com/ionium-ap/Rocket.git", branch = "ionium" }
rocket_prometheus = { git = "https://github.com/ionium-ap/rocket_prometheus.git", branch = "ionium" }
rocket_oauth2 = { git = "https://github.com/ionium-ap/rocket_oauth2.git", branch = "ionium" }
sentry-tracing = { git = "https://github.com/ionium-ap/sentry-rust.git", branch = "ionium" }
sentry = { git = "https://github.com/ionium-ap/sentry-rust.git", branch = "ionium" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.release]
debug = true
